CONFDEV-21792 JIRA issues macro select2 lozenge styling regression - vertical alignment is incorrect

--- a/confluence-jira-plugin/src/main/resources/jira/dialogs.css
+++ b/confluence-jira-plugin/src/main/resources/jira/dialogs.css
@@ -235,8 +235,8 @@ a.jql-display-opts-open span {
     margin : 10px;
 }
 
-.select2-container-jira-issue-columns .select2-choices .select2-search-choice {
-    padding-top: 5px; !important;
+#jira-connector .select2-container-multi.select2-container-disabled .select2-search-choice {
+    padding: 1px 5px;
 }
 
 
